# llama-rs

./: .gitignore  Cargo.toml  Makefile  README.md
c/: llama2-debug-run.c
docs/: export-bin-format.md
examples/: hello-sentencepiece.rs
src/: config.rs  dbg.rs  lib.rs  main.rs  q80.rs  sampler.rs  tokenizer.rs  utilities.rs
src/llama2/: chat.rs  forward.rs  math.rs  mod.rs  runstate.rs  sampler.rs  tokenizer.rs  utilities.rs  weights.rs
src/llama2_q/: mod.rs  q80.rs  qrunstate.rs  qweights.rs
src/run/: chat.rs  forward.rs  math.rs  mod.rs  sampler.rs  tokenizer.rs  utilities.rs
tests/: llama2-rs-test.expected.txt
