[package]
name = "llama2-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.3"
byteorder = "1.5.0"
rand = "0.9.0-alpha.1"

[profile.release]
# optimize for speed
opt-level = 3
lto = true
codegen-units = 1
